crates/llvmkit-ir/tests/compile_fail/ssa_def_wrong_width.stderr
error[E0277]: the trait bound `IntValue<'_, i64, Brand<'_>>: IntoIntValue<'_, i32, Brand<'_>>` is not satisfied
  --> tests/compile_fail/ssa_def_wrong_width.rs:36:28
   |
36 |         b.def_int_var(x32, wide).unwrap();
   |           -----------      ^^^^ the trait `IntoIntValue<'_, i32, Brand<'_>>` is not implemented for `IntValue<'_, i64, Brand<'_>>`
   |           |
   |           required by a bound introduced by this call
   |
help: the trait `IntoIntValue<'_, i32, Brand<'_>>` is not implemented for `IntValue<'_, i64, Brand<'_>>`
      but trait `IntoIntValue<'_, i64, Brand<'_>>` is implemented for it
  --> src/int_width.rs
   |
   | impl<'ctx, W: IntWidth, B: ModuleBrand + 'ctx> IntoIntValue<'ctx, W, B> for IntValue<'ctx, W, B> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `i64`, found `i32`
note: required by a bound in `SsaBuilder::<'m, 'ctx, B, F, Positioned, R>::def_int_var`
  --> src/ssa_builder.rs
   |
   |     pub fn def_int_var<W: IntWidth, V>(
   |            ----------- required by a bound in this associated function
...
   |         V: IntoIntValue<'ctx, W, B>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SsaBuilder::<'m, 'ctx, B, F, Positioned, R>::def_int_var`
